# docparse

./: .gitignore  CHANGES  Makefile  README.md  pyproject.toml
docparse/: __init__.py  google.py
tests/: test_google.py
