[tool.poetry]
name = "docparse"
version = "0.1.0"
description = ""
authors = ["jdidion <github@didion.net>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.plugins."docparse.parsers"]
"google" = "docparse.google"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
